--- a/trunk/server/src/main/webapp/index.html
+++ b/trunk/server/src/main/webapp/index.html
@@ -17,7 +17,8 @@
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootswatch.js"></script>
-    <script src="http://cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+    <script src="http://cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
+
     <script type="text/javascript" async="" src="js/ga.js"></script><script>
 
         var _gaq = _gaq || [];
@@ -39,7 +40,35 @@
         }
     </style>
     <script>
+        $.fn.serializeObject = function()
+        {
+            var o = {};
+            var a = this.serializeArray();
+            $.each(a, function() {
+                if (o[this.name]) {
+                    if (!o[this.name].push) {
+                        o[this.name] = [o[this.name]];
+                    }
+                    o[this.name].push(this.value || '');
+                } else {
+                    o[this.name] = this.value || '';
+                }
+            });
+            return o;
+        };
         $(document).ready(function() {
+            $('#userTable').dataTable( {
+                "processing": true,
+                "serverSide": true,
+                "ajax": "http://localhost:8080/server/rest/rest/users/datatable",
+                "columns": [
+                    { "data": "username" },
+                    { "data": "firstName" },
+                    { "data": "lastName" },
+                    { "data": "email" },
+                    { "data": "id" }
+                ]
+            } );
             $("#users").click(function(){
                 $("#userForm").hide();
                 $("#userList").show();
@@ -50,11 +79,39 @@
                 $("#userForm").show();
 
             });
-            $('#userTable').dataTable( {
-                "processing": true,
-                "serverSide": true,
-                "ajax": "rest/user/all/datatable"
-            } );
+            $("#save").click(function(){
+                var formData = $("#uForm").serializeObject();
+
+                $.ajax({
+                    type: "POST",
+                    url: "rest/rest/user",
+                    data: JSON.stringify(formData),
+                    contentType: "application/json",
+                    dataType: "json",
+                    success: function(data){
+                        $('#userTable').dataTable().fnDestroy();
+                        $('#userTable').dataTable( {
+                            "processing": true,
+                            "serverSide": true,
+                            "ajax": "rest/rest/users/datatable",
+                            "columns": [
+                                { "data": "username" },
+                                { "data": "firstName" },
+                                { "data": "lastName" },
+                                { "data": "email" },
+                                { "data": "id" }
+                            ]
+                        } );
+                        $("#userForm").hide();
+                        $("#userList").show();
+                    },
+                    failure: function(errMsg) {
+                        alert(errMsg);
+                    }
+                });
+
+            });
+
         });
     </script>
 </head>
@@ -92,105 +149,105 @@
 <div class="container">
 
 
-<!-- Tables
-================================================== -->
-<div id="userList" class="bs-docs-section">
+    <!-- Tables
+    ================================================== -->
+    <div id="userList" class="bs-docs-section">
 
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page-header">
-                <h3>Users</h3>
-            </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="page-header">
+                    <h3>Users</h3>
+                </div>
 
-            <div class="bs-component">
-                <table id="userTable" class="table table-striped table-hover ">
-                    <thead>
-                    <tr>
-                        <th>Username</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Email</th>
-                        <th>ID</th>
-                    </tr>
-                    </thead>
+                <div class="bs-component">
+                    <table id="userTable" class="table table-striped table-hover ">
+                        <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Email</th>
+                            <th>ID</th>
+                        </tr>
+                        </thead>
 
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div id="userForm" class="bs-docs-section"  style="display: none;">
-    <div class="page-header">
-        <h3>User</h3>
-    </div>
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="well bs-component">
-                <form class="form-horizontal">
-                    <fieldset>
-
-                        <div class="form-group">
-                            <label for="username" class="col-lg-2 control-label">Username</label>
-                            <div class="col-lg-10">
-                                <input type="text" class="form-control" id="username" placeholder="Username">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-                            <div class="col-lg-10">
-                                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="firstName" class="col-lg-2 control-label">First Name</label>
-                            <div class="col-lg-10">
-                                <input type="text" class="form-control" id="firstName" placeholder="First Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="lastName" class="col-lg-2 control-label">Last Name</label>
-                            <div class="col-lg-10">
-                                <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email" class="col-lg-2 control-label">Email</label>
-                            <div class="col-lg-10">
-                                <input type="text" class="form-control" id="email" placeholder="Email">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-lg-10 col-lg-offset-2">
-
-                                <button type="submit" class="btn btn-primary pull-right">Save</button>
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
+                    </table>
+                </div>
             </div>
         </div>
-
     </div>
-</div>
 
+    <div id="userForm" class="bs-docs-section"  style="display: none;">
+        <div class="page-header">
+            <h3>User</h3>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="well bs-component">
+                    <form class="form-horizontal" id="uForm" name="uForm">
+                        <fieldset>
 
-<footer>
-    <div class="row">
-        <div class="col-lg-12">
+                            <div class="form-group">
+                                <label for="username" class="col-lg-2 control-label">Username</label>
+                                <div class="col-lg-10">
+                                    <input type="text" class="form-control" name="username" id="username" placeholder="Username">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+                                <div class="col-lg-10">
+                                    <input type="password" class="form-control" name="password" id="inputPassword" placeholder="Password">
 
-            <ul class="list-unstyled">
-                <li class="pull-right"><a href="#top">Back to top</a></li>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="firstName" class="col-lg-2 control-label">First Name</label>
+                                <div class="col-lg-10">
+                                    <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="lastName" class="col-lg-2 control-label">Last Name</label>
+                                <div class="col-lg-10">
+                                    <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="email" class="col-lg-2 control-label">Email</label>
+                                <div class="col-lg-10">
+                                    <input type="text" class="form-control" name="email" id="email" placeholder="Email">
+                                </div>
+                            </div>
 
-            </ul>
-            <p>Made by <a href="http://www.ap2cloud.com/" rel="nofollow">Ap2Cloud</a>. &nbsp;Contact: <a href="mailto:tim@ap2cloud.com">tim@ap2cloud.com</a>.</p>
+                            <div class="form-group">
+                                <div class="col-lg-10 col-lg-offset-2">
+                                    <a id="save" href="#" class="btn btn-primary pull-right">Save</a>
+
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
 
         </div>
     </div>
 
-</footer>
+
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+
+                <ul class="list-unstyled">
+                    <li class="pull-right"><a href="#top">Back to top</a></li>
+
+                </ul>
+                <p>Made by <a href="http://www.ap2cloud.com/" rel="nofollow">Ap2Cloud</a>. &nbsp;Contact: <a href="mailto:tim@ap2cloud.com">tim@ap2cloud.com</a>.</p>
+
+            </div>
+        </div>
+
+    </footer>
 
 
 </div>
