--- a/trunk/server/src/main/webapp/index.html
+++ b/trunk/server/src/main/webapp/index.html
@@ -60,7 +60,7 @@
             $('#userTable').dataTable( {
                 "processing": true,
                 "serverSide": true,
-                "ajax": "http://localhost:8080/server/rest/rest/users/datatable",
+                "ajax": "rest/users/datatable",
                 "columns": [
                     { "data": "username" },
                     { "data": "firstName" },
@@ -84,7 +84,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "rest/rest/user",
+                    url: "rest/user",
                     data: JSON.stringify(formData),
                     contentType: "application/json",
                     dataType: "json",
@@ -93,7 +93,7 @@
                         $('#userTable').dataTable( {
                             "processing": true,
                             "serverSide": true,
-                            "ajax": "rest/rest/users/datatable",
+                            "ajax": "rest/users/datatable",
                             "columns": [
                                 { "data": "username" },
                                 { "data": "firstName" },
